@@ -1,5 +1,12 @@
 2012-08-30  Iain Buclaw  <ibuclaw@ubuntu.com>
 
+	* d-codegen.cc(IRState::expandDecl): Use IRState::vinit.
+	(IRState::binding): Likewise.
+	(IRState::var): Handle all declarations, not just vars.
+	* d-glue.cc(PtrExp::toElem): Simplify use of IRState::var.
+	(SymbolExp::toElem ): Likewise.
+	(ThisExp::toElem): Likewise.
+
 	* d-lang.cc(d_init): Remove 'Thumb' identifier for ARM as 16bit
 	platforms aren't supported.
 	(GNU_LongDouble128): Remove identifier as long double size is
